--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "a graphql express server",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon ./index.js --exec babel-node -e js"
-    
+    "start": "nodemon ./index.js --exec babel-node -e js"
   },
   "repository": {
     "type": "git",
@@ -14,10 +13,14 @@
   "author": "choudel",
   "license": "ISC",
   "dependencies": {
+    "casual": "^1.6.2",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "nodemon": "^2.0.19"
+    "lodash": "^4.17.21",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.19",
+    "sequelize": "^6.21.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.6",
